syntax = "proto3";

package user_stat;

import "user-stat/messages.proto";

service UserStat {
  rpc Query(QueryRequest) returns (stream User) {}
  rpc RawQuery(RawQueryRequest) returns (stream User) {}
}
